--- a/index.html
+++ b/index.html
@@ -813,6 +813,11 @@
       margin-bottom: 10px;
     }
 
+    .fa-pepper-hot {
+      color: red;
+
+    }
+
     .product-icons {
       list-style: none;
       padding: 0;
@@ -873,7 +878,7 @@
   <header>
     <div class="logo">
       <img src="./images/logo.jpg" alt="Logo">
-      <span>Ermunai Organic Farm Foods Pvt Ltd</span>
+      <span>Ermunai Organic Farm Foods</span>
     </div>
 
     <!-- Navigation -->
@@ -947,7 +952,8 @@
     <div class="container">
       <div class="section-header">
         <h2>Export Ready Products</h2>
-        <p>Premium traditional wellness foods for global health-conscious buyers</p>
+        <p>“Traditional condiment powders are dry spice and pulse-based blends used as flavour enhancers and nutritional
+          accompaniments in Indian cuisine.”</p>
       </div>
 
       <div class="product-cards-grid">
@@ -967,7 +973,7 @@
         <!-- Product Card 2 -->
         <div class="export-card">
           <img src="./images/Multi-Millet&Whole-Pulses-Adai-Mix.png" alt="Multi Millet Adai Mix">
-          <h3>Multi-Millet & Whole-Pulses Adai Mix</h3>
+          <h3>Multi-Millet & Native Whole-Pulses Adai Mix</h3>
           <p>Rich plant protein & high energy meal with complementing amino acids.</p>
           <ul class="product-icons">
             <li><i class="fa-solid fa-dumbbell"></i> Protein Rich</li>
@@ -984,11 +990,14 @@
           <p>Authentic lentil seasoning powder — perfect with rice or breakfast foods.</p>
           <ul class="product-icons">
             <li><i class="fa-solid fa-utensils"></i> High Protein</li>
-            <li><i class="fa-solid fa-pepper-hot"></i> Regional Taste</li>
+            <li><i class="fa-solid fa-pepper-hot" style="color: red;"></i> Red Chillies</li>
+            <li><i class="fa-solid fa-industry"></i> Manufacturing Unit: Chennai</li>
             <li><i class="fa-solid fa-certificate"></i> Long Shelf Life</li>
           </ul>
           <p class="small-info">Shelf Life: 9–12 Months | Pack Sizes: 200g, Bulk</p>
         </div>
+
+
       </div>
 
       <div class="cta-export">
@@ -1038,7 +1047,8 @@
           </div>
           <div class="card-content">
             <h3>Idli Podi's</h3>
-            <p>Flavorful spice powders for enhancing traditional dishes.</p>
+            <p>Traditional condiment powders are dry spice and pulse-based blends used as flavour enhancers and
+              nutritional accompaniments in Indian cuisine.</p>
             <a href="shop.html?category=idliPodi" class="explore-link">Explore Category →</a>
           </div>
         </div>
@@ -1069,6 +1079,39 @@
       </div>
     </div>
   </section>
+
+  <!-- ✅ Our Catalogues Section -->
+  <!-- <section class="catalogue-section" style="padding: 60px 20px; text-align: center; background: #f9f9f9;">
+    <div class="container">
+      <h2 style="font-size: 28px; color: green; margin-bottom: 20px; text-align: center;">Our Product Catalogues</h2>
+      <p style="margin-bottom: 40px; color: #555; text-align: center;">Download our catalogues to explore our full range
+        of organic farm products.</p>
+      <div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap;">
+        <div class="catalogue-card"
+          style="background: white; padding: 25px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); width: 280px; transition: 0.3s;">
+          <img src="./images/logo.jpg" alt="Retail Catalogue"
+            style="width: 100%; height: 150px; object-fit: contain; margin-bottom: 15px;">
+          <h3>Retail Catalogue</h3>
+          <p style="font-size: 14px; color: #666; margin: 10px 0;">Our complete list for individual health-conscious
+            buyers.</p>
+          <a href="#" class="btn-export"
+            style="display: inline-block; padding: 10px 20px; background: green; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">Download
+            PDF</a>
+        </div>
+        <div class="catalogue-card"
+          style="background: white; padding: 25px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); width: 280px; transition: 0.3s;">
+          <img src="./images/logo.jpg" alt="Export Catalogue"
+            style="width: 100%; height: 150px; object-fit: contain; margin-bottom: 15px;">
+          <h3>Export Catalogue</h3>
+          <p style="font-size: 14px; color: #666; margin: 10px 0;">Premium traditional wellness foods for global
+            markets.</p>
+          <a href="#" class="btn-export"
+            style="display: inline-block; padding: 10px 20px; background: green; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">Download
+            PDF</a>
+        </div>
+      </div>
+    </div>
+  </section> -->
 
   <!-- ✅ FAQ Section -->
   <section class="faq">
@@ -1186,8 +1229,8 @@
     <div class="footer-container">
       <!-- About Section -->
       <div class="footer-section about">
-        <h3>Ermunai Organic Farm Foods Pvt Ltd</h3>
-        <p><i class="fa fa-map-marker-alt"></i> M/s. Ermunai Organic Farm Foods Pvt Ltd,<br>
+        <h3>Ermunai Organic Farm Foods</h3>
+        <p><i class="fa fa-map-marker-alt"></i> M/s. Ermunai Organic Farm Foods,<br>
           Plot No. 8, Ramalingam St., BFI,<br>
           Muraliram Srinivas Flats,<br>
           Ullagaram, Chennai - 600 091.</p>
@@ -1249,7 +1292,7 @@
 
     <!-- Footer Bottom -->
     <div class="footer-bottom">
-      <p>© 2025 Ermunai Organic Farm Foods Pvt Ltd. All rights reserved.</p>
+      <p>© 2025 Ermunai Organic Farm Foods. All rights reserved.</p>
       <p class="footer-links">
         <a href="privacy.html" target="_blank">Privacy Policy</a> |
         <a href="terms.html" target="_blank">Terms & Conditions</a> |
