--- a/feedback.html
+++ b/feedback.html
@@ -497,7 +497,7 @@
     <header>
         <div class="logo">
             <img src="./images/logo.jpg" alt="Logo">
-            <span>Ermunai Organic Farm Foods Pvt Ltd</span>
+            <span>Ermunai Organic Farm Foods</span>
         </div>
 
         <!-- Navigation -->
@@ -582,7 +582,7 @@
         <div class="footer-container">
             <!-- About Section -->
             <div class="footer-section about">
-                <h3>Ermunai Organic Farm Foods Pvt Ltd</h3>
+                <h3>Ermunai Organic Farm Foods</h3>
                 <p><i class="fa fa-map-marker-alt"></i> M/s. Ermunai Organic Farm Foods Pvt Ltd,<br>
                     Plot No. 8, Ramalingam St., BFI,<br>
                     Muraliram Srinivas Flats,<br>
@@ -646,7 +646,7 @@
 
         <!-- Footer Bottom -->
         <div class="footer-bottom">
-            <p>© 2025 Ermunai Organic Farm Foods Pvt Ltd. All rights reserved.</p>
+            <p>© 2025 Ermunai Organic Farm Foods. All rights reserved.</p>
             <p class="footer-links">
                 <a href="privacy.html" target="_blank">Privacy Policy</a> |
                 <a href="terms.html" target="_blank">Terms & Conditions</a> |
