--- a/purchase.html
+++ b/purchase.html
@@ -462,7 +462,7 @@
   <header>
     <div class="logo">
       <img src="./images/logo.jpg" alt="Logo">
-      <span>Ermunai Organic Farm Foods Pvt Ltd</span>
+      <span>Ermunai Organic Farm Foods</span>
     </div>
 
     <nav>
@@ -500,7 +500,7 @@
   <footer>
     <div class="footer-container">
       <div class="footer-section about">
-        <h3>Ermunai Organic Farm Foods Pvt Ltd</h3>
+        <h3>Ermunai Organic Farm Foods</h3>
         <p><i class="fa fa-map-marker-alt"></i> M/s. Ermunai Organic Farm Foods Pvt Ltd,<br>
           Plot No. 8, Ramalingam St., BFI,<br>
           Muraliram Srinivas Flats,<br>
@@ -555,7 +555,7 @@
       </a>
     </div>
     <div class="footer-bottom">
-      <p>© 2025 Ermunai Organic Farm Foods Pvt Ltd. All rights reserved.</p>
+      <p>© 2025 Ermunai Organic Farm Foods. All rights reserved.</p>
       <p class="footer-links">
         <a href="privacy.html" target="_blank">Privacy Policy</a> |
         <a href="terms.html" target="_blank">Terms & Conditions</a> |
